syntax = "proto3";

package auth;
option go_package = "./auth";

service AuthService {
    rpc Register (User) returns (AUthResponse);
    rpc Login (LoginRequest) returns (AUthResponse);
}


message User {
    string id = 1;
    string username = 2;
    string password = 3;
    string email = 4;
}

message AUthResponse {
    string id = 1;
    string username = 2;
    string email = 3;
    string token = 4;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}